--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -212,6 +212,13 @@
   line-height: 1.6;
 }
 
+.recipe-output-area .recipe-content pre {
+  white-space: pre-wrap;
+  word-break: break-word;
+  font-family: inherit;
+  font-size: inherit;
+}
+
 .recipe-output-area .placeholder-text {
   color: var(--secondary-text);
 }
